# Project_AppBigData

./: .gitattributes  Data Prep.ipynb  Feature Engineering.ipynb  README.md  Subject.md  Training.ipynb  data_preparation.py  feature_engineering.py  main.py  predict.py  pyproject.toml  trainGradientBoosting.py  trainRandomForest.py  trainXGBoost.py  training.py
Notebooks/: Feature Engineering.ipynb  Predict.ipynb
docs/builddir/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/builddir/.doctrees/: environment.pickle  index.doctree
docs/source/: conf.py  index.rst  modules.rst  trainGradientBoosting.rst  trainRandomForest.rst  trainXGBoost.rst
mlruns/0/: meta.yaml
mlruns/0/0e960cb647d148f3b09814ce43f7de7b/: meta.yaml
mlruns/0/1f8180d11f6146389b4b0a4a08401c1e/: meta.yaml
mlruns/0/2a9b7c7082fb45f39572a760456db468/: meta.yaml
mlruns/0/2dd47b4ea58b4c54b5b812e51fa43078/: meta.yaml
mlruns/0/36d435465833404b841bded5a3bbef51/: meta.yaml
mlruns/0/3f759fc3d2ea45eca877ea599775fbf3/: meta.yaml
mlruns/0/4cbdd802002b4aa8a97b70ed18a02ad3/: meta.yaml
mlruns/0/5e89ab8925784add864d24f1988613b3/: meta.yaml
mlruns/0/6062eebaae4340e692fda1c9e3722858/: meta.yaml
mlruns/0/654de423007f4d9fbad4a60cf673675f/: meta.yaml
mlruns/0/725d0f403f8645f7b9dceaee6c0d1a00/: meta.yaml
mlruns/0/7fa0e148627649d897c14126a3454d9b/: meta.yaml
mlruns/0/81826e1adc054e65b8a711c9028aba28/: meta.yaml
model/: GradientBoostingClass.model.joblib  RandomForestClass.model.joblib  Xgboost.model.joblib
notebooks/: Predict.ipynb  Training with shap.ipynb
(+137 files in other folders)
