[tool.poetry]
name = "project_appbigdata"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
missingno = "^0.5.0"
pydot = "^1.4.2"
seaborn = "^0.11.2"
sklearn = "^0.0"
xgboost = "^1.5.0"
Sphinx = "^4.3.0"
mlflow = "^1.21.0"
joblib = "^1.1.0"
shap = "^0.40.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
